<resources>
    <string name="app_name">Journal</string>
    <string name="no_journals">No Journals Available</string>
    <string name="new_journal">New Journal</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="register">Sign Up</string>
    <string name="no_account">Don\'t have an account yet?</string>
    <string name="have_account">Already a member?</string>
    <string name="title">Title</string>
    <string name="home">Home</string>
    <string name="bin">Bin</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_trashed_journals">No journals trashed</string>
    <string name="empty">Empty Bin</string>
    <string name="restore">Restore</string>
    <string name="delete">Delete</string>
    <string name="client_id">1010383585312-erqk7u5og7ah62fmlvrnr311b468bmuk.apps.googleusercontent.com</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_summary">send us your comments</string>
    <string name="version">Version</string>
    <string name="version_number">1.0</string>
</resources>
