<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_bin"
            android:icon="@drawable/ic_bin"
            android:title="@string/bin" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

    </group>

    <!--<group android:checkableBehavior="single"-->
        <!--android:id="@+id/group_settings">-->
        <!--<item-->
            <!--android:id="@+id/nav_share"-->
            <!--android:icon="@drawable/ic_menu_share"-->
            <!--android:title="@string/friends"/>-->

        <!--<item-->
            <!--android:id="@+id/nav_setting"-->
            <!--android:icon="@drawable/ic_menu_send"-->
            <!--android:title="@string/settings"/>-->

    <!--</group>-->




</menu>
