<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_centerInParent="true"
    android:layout_margin="15dp">

  <ImageView
      android:layout_width="match_parent"
      android:layout_height="80dp"
      android:id="@+id/logo"
      android:text="Logo"
      android:src="@drawable/logopng"
      android:layout_margin="20dp"
      android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:layout_below="@+id/logo"
        android:padding="10dp"
        android:layout_marginBottom="7dp"
        android:id="@+id/email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:layout_below="@+id/email"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_marginBottom="25dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
       android:background="@drawable/rounded_button_primary"
        android:textColor="@color/white"
        android:text="@string/login"
        android:layout_below="@+id/password"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout"
        android:gravity="center"
        android:layout_below="@+id/btnLogin"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="OR"
            android:textAlignment="center"
            android:layout_weight="1.5"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

    <Button
        android:layout_below="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google_sign_in"
        android:drawableLeft="@drawable/google"
        android:paddingLeft="10dp"
        android:id="@+id/google_sign_in"
        android:background="@drawable/rounded_button"
        android:layout_marginBottom="25dp"/>

    <!--<com.google.android.gms.common.SignInButton-->
        <!--android:layout_width="match_parent"-->
        <!--android:id="@+id/google_sign_in"-->
        <!--android:layout_below="@+id/layout"-->
        <!--android:background="@drawable/rounded_button"-->
        <!--android:layout_height="wrap_content" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/google_sign_in">

        <TextView
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:layout_marginRight="5dp"/>

        <TextView
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/register"
            android:textColor="@color/black"/>


    </LinearLayout>

</RelativeLayout>